# todorust

./: .gitignore  Cargo.toml  README.md  USAGE.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: TODOIST_SYNC_SUMMARY.md  ci-test-plan.md  code-review-report.md  output-formats-design.md  prd-gap-analysis.md  sync-api-development-plan.md  sync-migration-plan.md  todoist-sync-api.md  todorust-cli-prd.md
docs/plans/: 2026-01-15-add-output-formats.md  2026-01-15-filter-support-improvements.md  2026-01-15-fix-filters-and-output.md  2026-01-15-fix-filters-revised.md  2026-01-15-minor-fixes-v0.2.1.md  2026-01-15-todorust-cli-implementation.md  2026-02-14-ai-agent-optimizations.md  2026-02-16-local-cache-design.md  2026-02-16-local-cache-plan.md  STATUS.md
memory/: todoist-sync-api.md
scripts/hooks/: pre-commit  pre-push
skills/obsidian-todorust/: README.md  SKILL.md
skills/obsidian-todorust/assets/: example-daily-report.md
skills/obsidian-todorust/references/: todoist-filters.md  todorust-output.md  todorust-setup.md
skills/obsidian-todorust/scripts/: query_tasks.sh
skills/todoist-reports/: README.md  SKILL.md
skills/todoist-reports/assets/: example-weekly-report.md
skills/todoist-reports/references/: todoist-filters.md  todorust-output.md  todorust-setup.md
skills/todoist-reports/scripts/: query_tasks.sh
skills/todorust/: SKILL.md
src/: api.rs  config.rs  error.rs  formatter.rs  lib.rs  main.rs  models.rs
src/cli/: error.rs  handlers.rs  mod.rs
src/sync/: cache.rs  client.rs  commands.rs  mod.rs  models.rs
tests/: integration_test.rs
