[package]
name = "todorust"
version = "0.2.1"
edition = "2021"
description = "CLI tool for Todoist API with optimized JSON output"
authors = ["MimikyuDev <mail@mimiq.dev>"]
license = "MIT"
repository = "https://github.com/mimiqdev/todorust"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
