[package]
name = "todorust"
version = "0.3.0"
edition = "2021"
description = "CLI tool for Todoist API with optimized JSON output"
authors = ["MimikyuDev <mail@mimiq.dev>"]
license = "MIT"
repository = "https://github.com/mimiqdev/todorust"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
httpmock = "0.8"
